fix: fix whitespaces

--- a/style.css
+++ b/style.css
@@ -1,7 +1,3 @@
-body {
-
-}
-
 img {
     width: 300px;
 }
